# raytracer

./: CMakeLists.txt  LICENSE
include/: canvas.hpp  color.hpp  commonmath.hpp  matrix.hpp  renderer.hpp  tuple.hpp
src/: canvas.cpp  color.cpp  commonmath.cpp  matrix.cpp  raytracer.cpp  renderer.cpp  tuple.cpp
